Remove Java from primary requirements

--- a/htdocs/gcc-3.0/criteria.html
+++ b/htdocs/gcc-3.0/criteria.html
@@ -57,7 +57,7 @@ be completed before GCC 3.0 is released:
 <li><p>Java Standard Library</p>
     <p>The Java standard library should be present in the tree is
        required in order to avoid users having to download it
-       separately.</p>
+       separately.  <strong>Dropped</strong>.</p>
 <li><p>GCC Support Library</p>
     <p>The <code>libgcc</code> library will be built in both static
        and shared library whenever <code>--enable-shared</code> is
@@ -156,7 +156,6 @@ languages will be considered part of the release criteria:</p>
 <li>C
 <li>C++
 <li>Fortran
-<li>Java
 </ul>
 
 <p>The following languages will be supported by the release, but their
@@ -165,6 +164,7 @@ not to ship a particular release candidate:</p>
 
 <ul>
 <li>Chill (<strong>Dropped</strong>; see above)
+<li>Java
 <li>Objective-C
 </ul>
 
@@ -224,7 +224,6 @@ different programming languages.</p>
     <td>3.0
     <td><a href="http://www.netlib.org/lapack/lapack.tgz">
         LAPACK (testing programs)</a>
-<tr><td><td>Java
 </tr>
 </table>
 
@@ -328,7 +327,6 @@ following unit tests:</p>
         optimizations and for handling large functions.
 <tr><td><td>C++
 <tr><td><td>Fortran
-<tr><td><td>Java
 </table>
 
 <p>In addition to these unit tests, we will measure the time and peak
@@ -344,8 +342,8 @@ more than 25%, that candidate will be deemed unacceptable.</p>
 <p>The following issues are as of yet unresolved:</p>
 
 <ul>
-<li>What integration tests should be used for Fortran and Java?
-<li>What versions of HPUX and AIX should we use as primary platforms?
+<li>What integration tests should be used for Fortran?
+<li>What version of HPUX should we use as a primary platform?
 <li>What other tests should we use for compile-time performance
 measurement?
 <li>What tests should we use for code quality?
