* documentation.html, download.html, index.html, links.html, 	status.html, faq/index.html:  Markup fixes: <UL> cannot be embedded 	within <P>...</P>; logical markup instead of physical; missing tags.

--- a/htdocs/libstdc++/download.html
+++ b/htdocs/libstdc++/download.html
@@ -4,7 +4,7 @@
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: header.ihtml,v 1.1 2000/11/16 20:59:15 pme Exp $ -->
+<!-- $Id: download.html,v 1.10 2000/11/17 01:21:14 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -28,6 +28,7 @@
    the current libstdc++-v3 development sources.  To check out
    libstdc++-v3 only, use <TT>libstdc++-v3</TT> instead of <TT>gcc</TT>
    as the module.
+</P>
    <UL>
      <LI>Read-only CVS repository is available by anonymous CVS.  Directions 
          are <A HREF="http://gcc.gnu.org/cvs.html">here</A>.  You can also
@@ -35,9 +36,8 @@
      <LI>Read-write CVS repository is available by authorized CVS via SSH.
          Directions are <A HREF="http://gcc.gnu.org/cvswrite.html">here</A>.
    </UL>
-</P>
 <P>Once you have the GCC sources checked out over CVS, you can use the
-   <TT>contrib/gcc_update</TT> script to retrieve the latest changes, and
+   <CODE>contrib/gcc_update</CODE> script to retrieve the latest changes, and
    automatically update the timestamps of certain files.  With the
    timestamps updated, you won't need autoconf or the other tools (unless
    you make changes, obviously).
@@ -52,4 +52,3 @@
 <!--#include virtual="/libstdc++/footer.ihtml"-->
 </BODY>
 </HTML>
-
