--- a/htdocs/libstdc++/faq/index.html
+++ b/htdocs/libstdc++/faq/index.html
@@ -10,7 +10,7 @@
   ** Locations of "the most recent snapshot is the Nth" text are 
   ** answers 1_1, 1_4, 4_1, 5_6.
 -->
-<!-- $Id: index.html,v 1.8 2000/11/04 03:00:10 pme Exp $ -->
+<!-- $Id: index.html,v 1.9 2000/11/17 01:21:14 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -242,6 +242,7 @@ which is no longer available, thanks deja...-->
    <H2><A NAME="2_1">2.1 How do I install libstdc++-v3?</A></H2>
       <P>Complete instructions are not given here (this is a FAQ, not
          an installation document), but the tools required are few:
+      </P>
          <UL>
             <LI> A release of libstdc++.
             <LI> A recent release of GCC (version 2.95 works). Note
@@ -253,7 +254,6 @@ HREF="http://sources.redhat.com/autoconf/">autoconf</A>and <A
 HREF="http://sources.redhat.com/automake/">automake</A>. 
             <LI> GNU Make is the only make that supports these makefiles. 
          </UL>
-      </P>
       <P>The file <A HREF="../documentation.html">documentation.html</A>
          provides a good overview of the steps necessary to build, install,
          and use the library.  Instructions for configuring the library
@@ -271,7 +271,7 @@ HREF="http://sources.redhat.com/automake/">automake</A>.
    <H2><A NAME="2_2">2.2 Is this a drop-in replacement for the
                          libstdc++ that's shipped with g++?</A></H2>
       <P>Yes, as of 2.90.8, it is intended as such.  And as of 2.91,
-         libstdc++-v3 <EM>is</EM></P> the library that's shipped with
+         libstdc++-v3 <EM>is</EM> the library that's shipped with
          g++, so much of this answer has become moot.
       </P>
 
@@ -522,9 +522,9 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
          it is better to refer to files there by their path, as in:
          <!-- Careful, the leading spaces in PRE show up directly. -->
          <PRE>
+      </P>
        #include &lt;ext/hash_map&gt;
          </PRE>
-      </P>
       <P>Extensions to the library have
          <A HREF="../ext/howto.html">their own page</A>.
       </P>
@@ -584,7 +584,7 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@gcc.gnu.org">Gabriel Dos Reis</A>.
-<BR> $Id: index.html,v 1.8 2000/11/04 03:00:10 pme Exp $
+<BR> $Id: index.html,v 1.9 2000/11/17 01:21:14 pme Exp $
 </EM></P>
 
 
