--- a/htdocs/libstdc++/index.html
+++ b/htdocs/libstdc++/index.html
@@ -4,7 +4,7 @@
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: header.ihtml,v 1.1 2000/11/16 20:59:15 pme Exp $ -->
+<!-- $Id: index.html,v 1.5 2000/11/17 01:21:14 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -21,7 +21,7 @@
 
 <P>This is an ongoing project to implement the ISO 14882 Standard
    C++ Library as described in chapters 17 through 27 and Annex D.
-   <B>Participation is welcome!</B>
+   <STRONG>Participation is welcome!</STRONG>
 </P>
 
 <H2>What... is the airspeed velocity of an unladen swallow?</H2>
@@ -35,7 +35,7 @@
 <HR>
 
 <H3>News</H3>
-<P>
+
 <DL>
  <DT>2000-11-17
  <DD> Tenth snapshot release, 
@@ -71,11 +71,8 @@
  <DT>1998-07-15
  <DD> First snapshot release.
 </DL>
-</P>
 
 
 <!--#include virtual="/libstdc++/footer.ihtml"-->
 </BODY>
 </HTML>
-
-
