--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -4,7 +4,7 @@
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: header.ihtml,v 1.1 2000/11/16 20:59:15 pme Exp $ -->
+<!-- $Id: status.html,v 1.4 2000/11/17 01:21:14 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -137,18 +137,13 @@
    <a href="http://gcc.gnu.org/ml/gcc-bugs/2000-03/msg00574.html"> here </a>
 
 <P>And the response from one of the powerpc port maintainers:
+</P>
    <BLOCKQUOTE><EM>
    I opposed the original solution (involving weak symbols) on ELF, as
    it seemed to be the wrong idea.  I'm not sure what the right fix is,
    and don't think I have time to work on it right now.
    </EM></BLOCKQUOTE>
-</P>
-
-
-
 
 <!--#include virtual="/libstdc++/footer.ihtml"-->
 </BODY>
 </HTML>
-
-
