Update on declarations in for loops, and rotate old news items.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -11,6 +11,38 @@
 home page</a>.
 
 <dl>
+
+<dt><b>November 1, 2000</b></dt>
+<dd>
+Support for C99's <code>_Pragma</code> operator has been added to the
+preprocessor.  This feature effectively makes it possible to have
+<code>#pragma</code> directives be part of macro expansions, and to
+have their arguments expanded too if necessary.
+</dd>
+
+<dt><b>October 6, 2000</b></dt>
+<dd>
+We would like to point out that GCC 2.96 is not a formal GCC release nor
+will there ever be such a release.  Rather, GCC 2.96 has been the code-
+name for our development branch that will eventually become GCC 3.0.
+<small><a href="gcc-2.96.html">More...</a></small>
+</dd>
+
+<dt><b>Sep 11, 2000</b></dt>
+<dd>
+Zack Weinberg of Cygnus, a Red Hat company, has contributed
+modifications to the C, C++, and Objective C compilers which permit
+them to use the C preprocessor library (cpplib) directly instead of
+via a separate executable.
+
+<p>This is not yet the default mode, but we hope it will be the
+default in GCC 3.0.  When it is used the compiler will be faster
+because it will not have to do lexical analysis twice, nor save the
+preprocessed output to a temporary file.  In the future, this will
+permit better error messages, and more detailed debugging information
+particularly when complex macros are used.</p>
+</dd>
+
 <dt><b>Sep 11, 2000</b></dt>
 <dd>
 Neil Booth has contributed a new lexer and macro-expander for the C
