--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -146,7 +146,7 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em>mixed declarations and code</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>new block scopes for selection<br>and iteration statements</em></td>
@@ -346,9 +346,6 @@ statements to be done first.</li>
 
 <li>Designated initializers in GCC do not support overriding previous
 initializers for a subobject.</li>
-
-<li>Mixed declarations and code are mostly supported, but <code>for
-(int i = 0; i &lt; 10; i++) /* ... */</code> isn't.</li>
 
 <li>The list above differs from that in the C99 standard as follows:
 "LIA compatibility annex" is removed, since it refers to C99's
