--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -159,6 +159,15 @@ Mark Mitchell, Nathan Sidwell, and Alexander Samuel of CodeSourcery,
 LLC.
 </dd>
 
+<dt><b>November 18, 2000</b></dt>
+<dd>
+GCC now supports ISO C99 declarations in <code>for</code> loops
+(<code>for (int i = 0; i &lt; 10; i++) /* ... */</code>).  These are
+only supported in C99 mode (command line options
+<code>-std=gnu99</code> or <code>-std=c99</code>), which will be the
+default in some future release, but not in GCC 3.0.
+</dd>
+
 <dt><b>November 13, 2000</b></dt>
 <dd>
 We have now switched the C++ frontend to use
@@ -178,9 +187,7 @@ GCC now supports two more ISO C99 features:
 <code>&lt;stdbool.h&gt;</code> header; code that used that header will
 not be binary compatible with code using the new conforming
 version.)</li>
-<li>Mixed declarations and code in compound statements.  (However,
-<code>for (int i = 0; i &lt; 10; i++) /* ... */</code> isn't yet
-supported.)
+<li>Mixed declarations and code in compound statements.</li>
 </ul>
 </dd>
 
@@ -189,37 +196,6 @@ supported.)
 The C, C++ and Objective C front-ends to GCC now use an integrated
 preprocessor by default.  If all goes well, this will also be the
 default mode for GCC 3.0.
-</dd>
-
-<dt><b>November 1, 2000</b></dt>
-<dd>
-Support for C99's <code>_Pragma</code> operator has been added to the
-preprocessor.  This feature effectively makes it possible to have
-<code>#pragma</code> directives be part of macro expansions, and to
-have their arguments expanded too if necessary.
-</dd>
-
-<dt><b>October 6, 2000</b></dt>
-<dd>
-We would like to point out that GCC 2.96 is not a formal GCC release nor
-will there ever be such a release.  Rather, GCC 2.96 has been the code-
-name for our development branch that will eventually become GCC 3.0.
-<small><a href="gcc-2.96.html">More...</a></small>
-</dd>
-
-<dt><b>Sep 11, 2000</b></dt>
-<dd>
-Zack Weinberg of Cygnus, a Red Hat company, has contributed
-modifications to the C, C++, and Objective C compilers which permit
-them to use the C preprocessor library (cpplib) directly instead of
-via a separate executable.
-
-<p>This is not yet the default mode, but we hope it will be the
-default in GCC 3.0.  When it is used the compiler will be faster
-because it will not have to do lexical analysis twice, nor save the
-preprocessed output to a temporary file.  In the future, this will
-permit better error messages, and more detailed debugging information
-particularly when complex macros are used.</p>
 </dd>
 
 </dl>
