--- a/htdocs/libstdc++/faq/index.html
+++ b/htdocs/libstdc++/faq/index.html
@@ -10,7 +10,7 @@
   ** Locations of "the most recent snapshot is the Nth" text are 
   ** answers 1_1, 1_4, 4_1, 5_6.
 -->
-<!-- $Id: index.html,v 1.9 2000/11/17 01:21:14 pme Exp $ -->
+<!-- $Id: index.html,v 1.10 2000/11/19 02:52:01 gerald Exp $ -->
 </HEAD>
 <BODY>
 
@@ -521,8 +521,8 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
          preprocessor search the g++-v3/ext and /backward directories,
          it is better to refer to files there by their path, as in:
          <!-- Careful, the leading spaces in PRE show up directly. -->
-         <PRE>
       </P>
+         <PRE>
        #include &lt;ext/hash_map&gt;
          </PRE>
       <P>Extensions to the library have
@@ -584,7 +584,7 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@gcc.gnu.org">Gabriel Dos Reis</A>.
-<BR> $Id: index.html,v 1.9 2000/11/17 01:21:14 pme Exp $
+<BR> $Id: index.html,v 1.10 2000/11/19 02:52:01 gerald Exp $
 </EM></P>
 
 
