Update c99status for flexible array members.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -55,7 +55,7 @@ paragraph 6) do not count as library issues.</p>
 </tr>
 
 <tr><td><em>flexible array members</em></td>
-    <td></td><td></td><td></td><td>Missing</td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em><code>static</code> and type qualifiers<br>in parameter array declarators</em></td>
@@ -346,6 +346,11 @@ statements to be done first.</li>
 
 <li>Designated initializers in GCC do not support overriding previous
 initializers for a subobject.</li>
+
+<li>Flexible array members are supported internally using GCC's
+zero-length array extension, which has fewer semantic restrictions.
+Thus conforming programs may be compiled, but non-conforming 
+programs may not be properly diagnosed.</li>
 
 <li>The list above differs from that in the C99 standard as follows:
 "LIA compatibility annex" is removed, since it refers to C99's
