Call new C++ ABI 'V3'.  Don't imply it's just default.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -36,7 +36,7 @@
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.
 
   <li><a href="http://reality.sgi.com/dehnert_engr/cxx/cxx-summary.html">
-  Multi-vendor standard C++ ABI</a> is the default in GCC releases 3.0 and
+  The V3 multi-vendor standard C++ ABI</a> is used in GCC releases 3.0 and
   above.
 
 </ul>
