Update on elimination of unused string constants.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -290,19 +290,13 @@ Stuff in progress has a contact name associated with it.</p>
 <p>Better optimization.
 
 <ol>
-<li>Constants in unused inline functions
+<li>Putting constants in special sections.
 
-<p>It would be nice to delay output of string constants so that string
-constants mentioned in unused inline functions are never generated.
-Perhaps this would also take care of string constants in dead code.
-
-<p>The difficulty is in finding a clean way for the RTL which refers
-to the constant (currently, only by an assembler symbol name) to point
-to the constant and cause it to be output.
-
-<p>A related problem: if a function has been placed in a special
+<p>If a function has been placed in a special
 section via attributes, we may want to put its static data and string
-constants in a special section too.  But which one?
+constants in a special section too.  But which one?  (Being able to
+specify a section for string constants would be useful for the Linux
+kernel.)
 
 <li>Optimize a sequence of if statements whose conditions are
 exclusive.
