* mail.html: Mark the libstdc++-prs list as historical and remove 	move references. Remove reference to sourceware.

--- a/htdocs/libstdc++/mail.html
+++ b/htdocs/libstdc++/mail.html
@@ -4,7 +4,7 @@
  <TITLE>Standard C++ Library v3</TITLE>
 <LINK REL="home" HREF="http://sources.redhat.com/libstdc++/">
 <LINK REL=StyleSheet HREF="lib3styles.css">
-<!-- $Id: header.ihtml,v 1.1 2000/11/16 20:59:15 pme Exp $ -->
+<!-- $Id: mail.html,v 1.5 2000/11/17 01:21:14 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -20,11 +20,7 @@
       development list
   <LI>libstdc++-cvs@sources.redhat.com:  a mailing list of 
       CVS-produced messages (exciting reading!)
-  <LI>libstdc++-prs@sources.redhat.com:  a mailing list for problem
-      reports and bugs
   </UL>
-  These used to be <EM>@sourceware.cygnus.com</EM> but have been renamed;
-  the old names will continue to work for a while.
 </P>
 
 <P>Use this handy little form to subscribe or unsubscribe from any of
@@ -35,7 +31,6 @@
   <select name="listname">
    <option value="libstdc++">libstdc++
    <option value="libstdc++-cvs">libstdc++-cvs
-   <option value="libstdc++-prs">libstdc++-prs
   </select>
  <br>
   Your e-mail address:
@@ -60,6 +55,7 @@
   <LI><A HREF="http://sources.redhat.com/ml/libstdc++/">libstdc++</A> 
   <LI><A HREF="http://sources.redhat.com/ml/libstdc++-cvs/">libstdc++-cvs</A> 
   <LI><A HREF="http://sources.redhat.com/ml/libstdc++-prs/">libstdc++-prs</A> 
+      (historical)
   </UL>
 </P>
 
@@ -78,5 +74,3 @@
 <!--#include virtual="/libstdc++/footer.ihtml"-->
 </BODY>
 </HTML>
-
-
