* htdocs/index.html: Add news about integrated CPP.         * htdocs/news.html: Rotate old news.         * htdocs/cpplib.html: Correct broken link.  Update.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -150,6 +150,13 @@ hope to release by the end of the year.
 
 <dl>
 
+<dt><b>November 26, 2000</b></dt>
+<dd>
+The C, C++ and Objective C front ends now use the integrated
+preprocessor exclusively; their independent ability to tokenize an
+input stream has been removed.
+</dd>
+
 <dt><b>November 18, 2000</b></dt>
 <dd>
 G++ is now using a new C++ ABI that represents classes more compactly,
@@ -176,26 +183,6 @@ Standard C++ Library which brings significant changes and improvements
 over our ``old'' library. There still be may some rough edges, but we
 are addressing problems as soon as we learn about them -- please help
 testing and improving ``your'' ports!
-</dd>
-
-<dt><b>November 13, 2000</b></dt>
-<dd>
-GCC now supports two more ISO C99 features:
-<ul>
-<li>The builtin boolean <code>_Bool</code> type and the
-<code>&lt;stdbool.h&gt;</code> header.  (GCC 2.95 had a non-conforming
-<code>&lt;stdbool.h&gt;</code> header; code that used that header will
-not be binary compatible with code using the new conforming
-version.)</li>
-<li>Mixed declarations and code in compound statements.</li>
-</ul>
-</dd>
-
-<dt><b>November 2, 2000</b></dt>
-<dd>
-The C, C++ and Objective C front-ends to GCC now use an integrated
-preprocessor by default.  If all goes well, this will also be the
-default mode for GCC 3.0.
 </dd>
 
 </dl>
