--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -12,6 +12,26 @@ home page</a>.
 
 <dl>
 
+<dt><b>November 13, 2000</b></dt>
+<dd>
+GCC now supports two more ISO C99 features:
+<ul>
+<li>The builtin boolean <code>_Bool</code> type and the
+<code>&lt;stdbool.h&gt;</code> header.  (GCC 2.95 had a non-conforming
+<code>&lt;stdbool.h&gt;</code> header; code that used that header will
+not be binary compatible with code using the new conforming
+version.)</li>
+<li>Mixed declarations and code in compound statements.</li>
+</ul>
+</dd>
+
+<dt><b>November 2, 2000</b></dt>
+<dd>
+The C, C++ and Objective C front-ends to GCC now use an integrated
+preprocessor by default.  If all goes well, this will also be the
+default mode for GCC 3.0.
+</dd>
+
 <dt><b>November 1, 2000</b></dt>
 <dd>
 Support for C99's <code>_Pragma</code> operator has been added to the
