--- a/htdocs/projects/cpplib.html
+++ b/htdocs/projects/cpplib.html
@@ -11,15 +11,13 @@
 received six months of testing as the only preprocessor used by
 development gcc, and I'm pretty happy with its stability at this point.</p>
 
-<p>cpplib is now linked into the C and C++ front ends by default;
-remaining issues are minor.  It would be nice if integrated mode were
-mandatory for GCC 3.0.</p>
+<p>cpplib is now linked into the C, C++ and Objective C front ends; this
+will be the case for GCC 3.0 too.</p>
 
 <h2>How to help test</h2>
 
-<p>Testing is not really necessary, unless you are prepared to test
-configurations with <code>--enable-c-cpplib</code>.  If you do this,
-be prepared for odd glitches - see below for the list of known problems.
+<p>Testing is not really necessary.  If you do, be prepared for odd
+glitches - see below for the list of known problems.
 </p>
 
 <p>The best thing to test with the integrated preprocessor is large
@@ -140,7 +138,7 @@ varargs macros in traditional mode is a deliberate feature.</p>
       also.
 
   <li>The dependency generator is lacking in several areas.  Tom
-      Tromey has a <a href="ml/gcc/1999-09n/msg00742.html">proposal</a>
+      Tromey has a <a href="../ml/gcc/1999-09n/msg00742.html">proposal</a>
       for improving it - added features include the ability to control
       the name of the output file and the target of the generated
       rule, and add dummy rules to prevent lossage when a header is
