--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -14,28 +14,23 @@ testsuite.</strong></p>
 <p>Before you install GCC, you might wish to run the testsuite. This
 step is optional and may require you to download additional software.</p>
 
-<p>First, you must have downloaded the testsuites; the full distribution
-contains testsuites.  If you downloaded the "core" compiler plus any front
-ends, then you do not have the testsuites.  You can download the testsuites
-from the same site where you downloaded the core distribution and language
-front ends.</p>
+<p>First, you must have <a href="download.html">downloaded the
+testsuites</a>. The full distribution contains testsuites; only if you
+downloaded the "core" compiler plus any front ends, you do not have the
+testsuites.</p>
 
-<p>Second, you must have a new version of dejagnu on your system; dejagnu-1.3
-will not work.  We have made dejagnu snapshots available in
-<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure">
-gcc.gnu.org:/pub/gcc/infrastructure</a> until a new version of
-dejagnu can be released.  If you find multiple snapshots of dejagnu
-there, you should probably get the most recent one.
-(Note, dejagnu will not build/run on NEXTSTEP systems.)</p>
+<p>Second, you must have a new version of dejagnu on your system;
+dejagnu 1.3 will not work.  We have made dejagnu snapshots available at
+<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure">ftp://gcc.gnu.org:/pub/gcc/infrastructure</a>
+until a new version of dejagnu has been released.</p>
 
-
-<p>Assuming you've got the testsuites unpacked and have installed an
-appropriate dejagnu, you can run the testsuite with `<code>cd
-<i>objdir</i>; make -k check</code>`.
-This may take a long time.  Go get some lunch.</p>
+<p>Finally, you can run the testsuite (which may take a long time):</p>
+<blockquote><code>
+cd <i>objdir</i>; make -k check
+</code></blockquote>
 
 <p>The testing process will try to test as many components in the GCC
-distribution as possible, including the C, C++ and Fortran compiler as
+distribution as possible, including the C, C++ and Fortran compilers as
 well as the C++ runtime libraries.</p>
 
 
@@ -44,23 +39,26 @@ well as the C++ runtime libraries.</p>
 <p>As a first possibility to cut down the number of tests that are run it is
 possible to use `<code>make check-gcc</code>` or `<code>make check-g++</code>`
 in the gcc subdirectory of the object directory. To further cut down the
-tests the following is possible:
-<pre>
+tests the following is possible:</p>
+
+<blockquote><code>
   make check-gcc RUNTESTFLAGS="execute.exp &lt;other options&gt;"
-</pre>
-This will run all gcc execute tests in the testsuite.
-<pre>
+</code></blockquote>
+
+<p>This will run all gcc execute tests in the testsuite.</p>
+
+<blockquote><code>
   make check-g++ RUNTESTFLAGS="old-deja.exp=9805* &lt;other options&gt;"
-</pre>
-This will run the g++ "old-deja" tests in the testsuite where the filename mat
-ches 9805*.
+</code></blockquote>
+
+<p>This will run the g++ "old-deja" tests in the testsuite where the filename
+matches 9805*.</p>
 
 <p>The *.exp files are located in the testsuite directories of the GCC
 source, the most important ones being compile.exp, execute.exp, dg.exp
 and old-deja.exp. To get a list of the possible *.exp files, pipe the
 output of `<code>make check</code>` into a file and look at the
 "<code>Running ...  .exp</code>" lines.
-
 
 
 <h2>How to interpret test results</h2>
@@ -89,16 +87,16 @@ to fix this problem in future releases.</p>
 <h2>Submitting test results</h2>
 
 <p>If you want to report the results to the GCC project, use the
-<code>contrib/test_summary</code> shell script. Start it in the objdir with
-<pre>
-.../gcc-src/contrib/test_summary -p your_commentary.txt -m gcc-testresults@gcc.gnu.org |sh
-</pre>
+<code>contrib/test_summary</code> shell script. Start it in the objdir with</p>
+<blockquote><code>
+<i>srcdir</i>/contrib/test_summary -p your_commentary.txt -m gcc-testresults@gcc.gnu.org |sh
+</code></blockquote>
 
 <p>This script uses the <code>Mail</code> program to send the results, so
-make sure it is in your PATH. The file your_commentary_.txt is
+make sure it is in your PATH. The file your_commentary.txt is
 prepended to the testsuite summary and should contain any special
 remarks you have on your results or your build environment. Please
-don't edit the testsuite result block or the subject line, as these
+do not edit the testsuite result block or the subject line, as these
 messages are automatically parsed and presented at the <a
 href="http://gcc.gnu.org/testresults/">GCC testresults</a> web
 page.  Here you can also gather information on how specific tests
