--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-<title>Installation Instructions: Testing GCC</title>
+<title>Installing GCC: Testing</title>
 </head>
 
 <body>
-<h1 align="center">Installation Instructions: Testing GCC</h1>
+<h1 align="center">Installing GCC: Testing</h1>
 
 <p><strong>Please note that this is only applicable to current development
 versions of GCC and GCC 3.0 or later. GCC 2.95.x does not come with a
@@ -21,7 +21,7 @@ testsuites.</p>
 
 <p>Second, you must have a new version of dejagnu on your system;
 dejagnu 1.3 will not work.  We have made dejagnu snapshots available at
-<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure">ftp://gcc.gnu.org:/pub/gcc/infrastructure</a>
+<a href="ftp://gcc.gnu.org/pub/gcc/infrastructure">ftp://gcc.gnu.org/pub/gcc/infrastructure</a>
 until a new version of dejagnu has been released.</p>
 
 <p>Finally, you can run the testsuite (which may take a long time):</p>
