--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -223,6 +223,11 @@ where it doesn't fit in range).</li>
 list of format argument have the correct boundedness
 qualification.</li>
 
+<li>Finer grained warning options for some specific warnings (of use
+to NetBSD); <a
+href="http://gcc.gnu.org/ml/gcc-patches/2000-11/msg00798.html">patch</a>
+available.</li>
+
 <li>Meaning of "quad" and <code>%q</code>: anything more accurate than
 <code>long long</code>?  See messages <a
 href="http://gcc.gnu.org/ml/gcc-bugs/1999-02n/msg00164.html">1</a> and
@@ -232,15 +237,15 @@ obsolete given the new C99 formats and macros.)</li>
 
 <li>Wide string format support.</li>
 
-<li>Fix <code>format-va-1.c</code> (see <a
-href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?cmd=view&amp;pr=479&amp;database=gcc">PR
-c/479</a>).</li>
-
 <li>Handle format attributes on function pointers and typedefs; see <a
 href="http://gcc.gnu.org/ml/gcc/2000-09/msg00339.html">a message about
 this</a>.  Of course, this should be done so as to work for both C++
 and C.  Essentially, format attributes should be associated with the
-function type rather than with a function name.</li>
+function type rather than with a function name.  There's a more
+general issue here (see <a
+href="http://gcc.gnu.org/ml/gcc/2000-11/msg01150.html">message</a>):
+function attributes should attach to a declarator instead of a
+declaration.</li>
 
 <li>Get Marc Espie's <code>__attribute__((__nonnull__))</code> patch
 in (he may be working on a cleaner version that applies to current
