Remove a bit of emphasis. Present the steps need to build and install GCC as an ordered list and synchronse link descriptions with their targets.

--- a/htdocs/install/index.html
+++ b/htdocs/install/index.html
@@ -27,18 +27,18 @@ specific installation instructions carefully.  Then check the
 <a href="../faq.html">FAQ</a> to see if your problem is covered before you file
 a bug report.
 
-<p><em>Before</em> starting the build/install procedure <em>please</em> browse
+<p><em>Before</em> starting the build/install procedure please browse
 the <a href="specific.html">host/target specific installation notes</a>.
 
 <p>The installation procedure is broken into five steps.
 
-<ul>
-  <li> <a href="download.html">downloading the source</a>
-  <li> <a href="configure.html">configure</a>
-  <li> <a href="build.html">build</a>
-  <li> <a href="test.html">test</a> (optional)
-  <li> <a href="finalinstall.html">install</a>
-</ul>
+<ol>
+  <li><a href="download.html">Downloading the source</a></li>
+  <li><a href="configure.html">Configuration</a></li>
+  <li><a href="build.html">Building</a></li>
+  <li><a href="test.html">Testing</a> (optional)</li>
+  <li><a href="finalinstall.html">Final install</a></li>
+</ol>
 
 <p>Please note that GCC does not support <CODE>`make uninstall`</CODE>
 and probably won't do so in the near future as this would open a can
