2000-11-28  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* done.html (Autonomous Haulage): Fixed indentation.
	(jUSB, jPhoto): New entry.
	(Pal): Fixed indentation.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -71,11 +71,36 @@
 	</td>
 
 	<td>The <A HREF="http://www.mmsi.com/modular/trucks/index.html">
-	    Autonomous Truck Page</A>. <A HREF="/ml/java-discuss/2000-06/msg00086.html">Entry</A> submitted by 
-	    <A HREF="mailto:olson@mmsi.com">Jon Olson</A>.
+	    Autonomous Truck Page</A>.
+	    <A HREF="/ml/java-discuss/2000-06/msg00086.html">
+	    Entry</A> submitted by <A HREF="mailto:olson@mmsi.com">Jon
+	    Olson</A>.
 	</td>
       </tr>       
       <!-- End Autonomous Haulage -->
+      <!-- jUSB/jPhoto -->
+      <tr valign=top>
+        <td><B>jUSB/jPhoto</B></td>
+
+	<td>jUSB is an open source Java API for USB, with an
+	    implementation that runs on recent GNU/Linux OS
+	    distributions. The Java part of jUSB relies on CNI as the
+	    core of the API is written in C++ and C.
+
+	    jPhoto provides basic command line and library support for
+	    the digital camera protocol on top of jUSB.  The protocol is the
+	    new USB standard for talking to such devices called <A
+	    HREF="http://www.pima.net/standards/it10/PIMA15740/">PTP</A>.
+	</td>
+
+	<td>The <A HREF="http://jusb.sourceforge.net">jUSB</A>
+	     page. The <A HREF="http://jphoto.sourceforge.net">JPhoto</A>
+	     page.  <A HREF="/ml/java-discuss/2000-11/msg00112.html">Entry</A>
+	     submitted by <A HREF="mailto:david-b@pacbell.net">David
+	     Brownell</A>.
+	</td>
+      </tr>
+      <!-- End jUSB/jPhoto -->
       <!-- PAL -->
       <tr valign=top>
         <td><B>PAL</B></td>
@@ -92,7 +117,9 @@
 	</td>
 
 	<td><a href="http://www.pal-project.org/">The PAL Project</a>
-	    submitted by <a href="mailto:korbinian.strimmer@zoology.oxford.ac.uk">Korbinian Strimmer</a>.
+	    submitted by
+	    <a href="mailto:korbinian.strimmer@zoology.oxford.ac.uk">
+	    Korbinian Strimmer</a>.
 	</td>
       </tr>
       <!-- End PAL -->
@@ -123,7 +150,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.5 2000/07/19 12:25:59 tromey Exp $ </small></address>
+<small> $Id: done.html,v 1.6 2000/07/20 00:22:13 bryce Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
