--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -175,6 +175,17 @@ only supported in C99 mode (command line options
 default in some future release, but not in GCC 3.0.
 </dd>
 
+<dt><b>November 14, 2000</b></dt>
+<dd>
+Michael Matz has donated an implementation of the Lengauer and Tarjan
+algorithm for computing dominators in the CFG.  This algorithm can
+be significantly faster and more space efficient than our older
+algorithm.  For one particularly nasty CFG from complex C++ code
+(more than 77000 basic blocks) compile time dropped from more than
+40 minutes to around 25 minutes.  Memory consumption was also
+dramatically decreased.
+</dd>
+
 <dt><b>November 13, 2000</b></dt>
 <dd>
 We have now switched the C++ frontend to use
