2000-11-29  Alexandre Petit-Bianco  <apbianco@cygnus.com>
	* done.html(jUSB, jPhoto): Removed erroneous mention of C/C++.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -84,8 +84,7 @@
 
 	<td>jUSB is an open source Java API for USB, with an
 	    implementation that runs on recent GNU/Linux OS
-	    distributions. The Java part of jUSB relies on CNI as the
-	    core of the API is written in C++ and C.
+	    distributions.
 
 	    jPhoto provides basic command line and library support for
 	    the digital camera protocol on top of jUSB.  The protocol is the
@@ -150,7 +149,7 @@
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: done.html,v 1.6 2000/07/20 00:22:13 bryce Exp $ </small></address>
+<small> $Id: done.html,v 1.7 2000/11/29 06:50:48 apbianco Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
