--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -15,18 +15,18 @@ if you are mirroring the GCC pages so we can note it here!
 <ul>
 <li>Australia: <a href="ftp://mirror.aarnet.edu.au/pub/gcc/">mirror.aarnet.edu.au</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/gcc/">gd.tuwien.ac.at</a>
-<li>Belgium (Ghent): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">chardonnay.elis.rug.ac.be</a>
+<li>Belgium (Ghent) (releases only, no snapshots): <a href="ftp://chardonnay.elis.rug.ac.be/pub/mirrors/gcc.cygnus.com/pub/gcc/">chardonnay.elis.rug.ac.be</a>
 <LI>Brasil (releases only, no snapshots): <a href="ftp://ftp.softaplic.com.br/pub/sourceware/gcc/">ftp.softaplic.com.br</a>
 <LI>Brasil (releases only, no snapshots): <A HREF="ftp://ftp.unicamp.br/pub/gnu/=EXTRA=/cygnus/egcs/">ftp.unicamp.br</a>
 <li>Canada (releases only, no snapshots): <a href="ftp://ftp.crc.ca/pub/packages/egcs/">ftp.crc.ca</a>
-<li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/egcs/">ftp.foruto.com</a>
+<li>China (Hong Kong): <a href="ftp://ftp.foruto.com/pub/gcc.gnu.org/gcc/">ftp.foruto.com</a>
 <li>Czech Republic: <a href="ftp://sunsite.mff.cuni.cz/GNU/gcc/">sunsite.mff.cuni.cz</a>
 <li>Finland: <a href="ftp://ftp.funet.fi/pub/mirrors/sourceware.cygnus.com/pub/gcc/">ftp.funet.fi</a>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.ilog.fr/pub/Mirrors/gcc/">ftp.ilog.fr</a>
 <li>France (releases only, no snapshots): <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
 <li>France (Brittany, releases only, no snapshots): <a href="ftp://ftp.irisa.fr/pub/mirrors/egcs.cygwin.com/gcc/">ftp.irisa.fr</a>
 <li>France (Versailles): <a href="ftp://ftp.uvsq.fr/pub/egcs/">ftp.uvsq.fr</a>
-<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs//">ftp.grolier.fr</a>
+<li>France: <a href="ftp://ftp.grolier.fr/pub/egcs/">ftp.grolier.fr</a>
 <LI>Germany (Berlin): <A HREF="ftp://ftp.fu-berlin.de/unix/languages/egcs/">ftp.fu-berlin.de </A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!
 <LI>Germany: <A HREF="ftp://ftp.gwdg.de/pub/cygnus/egcs/">ftp.gwdg.de</a>
 <LI>Germany (releases only, no snapshots): <A HREF="ftp://ftp.uni-trier.de/pub/languages/c/implementation/egcs/">ftp.uni-trier.de</a>
