--- a/htdocs/libstdc++/faq/index.html
+++ b/htdocs/libstdc++/faq/index.html
@@ -10,7 +10,7 @@
   ** Locations of "the most recent snapshot is the Nth" text are 
   ** answers 1_1, 1_4, 4_1, 5_6.
 -->
-<!-- $Id: index.html,v 1.11 2000/11/19 21:06:30 gerald Exp $ -->
+<!-- $Id: index.html,v 1.12 2000/11/21 00:18:07 pme Exp $ -->
 </HEAD>
 <BODY>
 
@@ -134,7 +134,7 @@ HREF="http://gcc.gnu.org/gcc-2.95/buildstat.html">portability</A>
    <H2><A NAME="1_3">1.3 Who's in charge of it?</A></H2>
       <P>The libstdc++ project is contributed to by several developers
          all over the world, in the same way as GCC or Linux.
-         Benjamin Kosnik, Gabriel Dos Reis, Nathan Myers, and Ulrich
+         Benjamin Kosnik, Gabriel Dos Reis, Phil Edwards, and Ulrich
          Drepper are the lead maintainers of the CVS archive.
       </P>
       <P>Development and discussion is held on the libstdc++ mailing
@@ -386,7 +386,55 @@ HREF="http://sources.redhat.com/automake/">automake</A>.
 
 <pre>
 New: 
-NEEDS WRITTEN
+- namespace std:: is now on by default.
+- choice of "C" include strategies, including the shadow header work,
+  or generic global to std mapping of required "C" types.
+- cpu/atomicity.h tweaks, additions of ia64 and arm support.
+- abstraction of atomicity.h header to support notion of os/atomicity.h files.
+- addition of backward header bits
+- use of system_header pragma
+- Conditional use of -Werror
+- preliminary support for new g++ diagnostics capabilities, including
+  -fdiagnostics-show-location=once
+- pedantic and shadow argument warning fixes 
+- Ugly, yet correct mechanism for dealing with "C" math adopted,
+  including the use of builtins.
+- updates and configure/build work to support new libtool
+- addition of strstream 
+- valarray work
+- complex work
+- update to SGI STL 3.3
+- libio sync between glibc/libstdc++-v3. Some divergence since initial
+  merge, but sources remain quite close.
+- IO fixes for alpha
+- wide character work for IO when using libio
+- addition of c_io_stdio and "C" IO abstraction layer.
+- auto_ptr fixes, testsuite additions
+- Attempts to use -ffunction-sections -fdata-sections and
+  --gc-sections, depending on use of GNU ld and specific features. As of
+  late, --gc-sections has been disabled due to problems with it throwing
+  away initialization sections. This work is ongoing.
+- long double support
+- sub directory removal, coherent organization of cpu and os-specific
+  files, consolidation of include directories, integration of the C++
+  support bits for operator new/delete,exceptions, etc. All includes
+  are now either in the include/* hierarchy or in libsupc++'s sub directory.
+- Support for more platforms, including irix and bsd variants.
+- filebuf tweaks to deal with variable-size buffers.
+- filebuf implementation for putbackc, etc. al.
+- ctype rewritten. Includes ctype<char>, ctype<wchar_t>, and others.
+- codecvt rewritten. Includes codecvt<char, char, mbstate_t>,
+  codecvt<wchar_t, char, mbstate_t>. In addition,
+  implementation-defined conversions using iconv are now supported with
+  the __enc_traits partial-specialization of the State template
+  parameter of the codecvt class. In this manner, conversions between
+  encodings such as UCS4, USC2, UNICODE, UNICODEBIG, UNICODELITTLE, etc
+  can be performed.
+- preliminary work on named locales
+- preliminary documentation for locale implementation has been established.
+- Many, many bug fixes.
+- Many, many testsuite additions and consistent VERIFY usage.
+- work on mkcheck to make it more flexible, use libtool, etc.
 </pre>
 
 
@@ -605,7 +653,7 @@ HREF="http://sources.redhat.com/ml/libstdc++/1999/msg00084.html">speculation</A>
 Comments and suggestions are welcome, and may be sent to
 <A HREF="mailto:pme@sources.redhat.com">Phil Edwards</A> or
 <A HREF="mailto:gdr@gcc.gnu.org">Gabriel Dos Reis</A>.
-<BR> $Id: index.html,v 1.11 2000/11/19 21:06:30 gerald Exp $
+<BR> $Id: index.html,v 1.12 2000/11/21 00:18:07 pme Exp $
 </EM></P>
 
 
