* download.html: Comment out "development tree status" misinformation. 	Add information about Red Hat 7's RPMs.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -45,12 +45,6 @@ i
 <br><br>
 <h1>Downloading GCJ</h1>
 
-<p>
-There are several versions of GCJ and the LibGCJ runtime which are
-known to work. For most users we strongly suggest sticking to the
-<b>current stable release</b>. However, you have other options -- see below.
-<p>
-
 <table border="0" cellpadding="4" width="95%">
 <tr bgcolor="#b0d0ff">
  <th align="left">
@@ -71,7 +65,7 @@ or each of the Core Compiler, C++ and Java distributions.
 
 <p>
 
-The most current stable release of libgcj is 2.95.1. Libgcj 2.95.1 is available 
+The most current official release of libgcj is 2.95.1. Libgcj 2.95.1 is available 
 from
 <a href="ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz">
 ftp://sources.redhat.com/pub/java/libgcj-2.95.1.tar.gz
@@ -112,7 +106,12 @@ Libgcj snapshots are made nightly, and are available from
 <a href="ftp://sources.redhat.com/pub/java/snapshot">ftp://sources.redhat.com/pub/java/snapshot</a>.
 
 <h3>RPM</h3>
-RPMs are made available occasionally by Anthony Green.  The are available from
+Red Hat Linux 7 includes relatively recent, "QA'ed" snapshots of the gcj and 
+libgcj development trees which should work out-of-the-box. Look for the 
+<B>gcc-java</B>, <B>libgcj</B>, and <B>libgcj-devel</B> RPM packages on 
+disc 2.
+<p>
+RPMs are also made available occasionally by Anthony Green.  The are available from
 <a href="ftp://sources.redhat.com/pub/java/rpm/">ftp://sources.redhat.com/pub/java/rpm/</a>.
 <p>
 Everything will install under /usr/local/ag.  The source RPM unpacks
@@ -149,6 +148,7 @@ href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs/gcc/java">cvs
 archive</a> (the entire compiler is also 
 <a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/egcs">available</a>.)
 
+<!----------------------------------
 
 <p>
 
@@ -224,18 +224,18 @@ for more details on downloading and using this release.</td>
 </tr>
 
 </table>
+-------------------------------------->
 
 
 </td></tr>
 </table>
-
 <hr>
 
 <address>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.11 2000/07/05 06:07:19 kingdon Exp $
+$Id: download.html,v 1.12 2000/08/27 22:03:04 mark Exp $
 </small>
 </address>
 
