Update RPM section.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -106,19 +106,22 @@ Libgcj snapshots are made nightly, and are available from
 <a href="ftp://sources.redhat.com/pub/java/snapshot">ftp://sources.redhat.com/pub/java/snapshot</a>.
 
 <h3>RPM</h3>
-Red Hat Linux 7 includes relatively recent, "QA'ed" snapshots of the gcj and 
+<UL>
+<LI>Red Hat Linux 7 includes relatively recent, "QA'ed" snapshots of the gcj and 
 libgcj development trees which should work out-of-the-box. Look for the 
 <B>gcc-java</B>, <B>libgcj</B>, and <B>libgcj-devel</B> RPM packages on 
 disc 2.
+</LI>
+</UL>
 <p>
+
 RPMs are also made available occasionally by Anthony Green.  The are available from
-<a href="ftp://sources.redhat.com/pub/java/rpm/">ftp://sources.redhat.com/pub/java/rpm/</a>.
+<a href="ftp://sources.redhat.com/pub/java/rpm/">ftp://sources.redhat.com/pub/java/rpm/</a>
+and <a href=http://sources.redhat.com/mirrors.html>Mirror Sites</a>.
 <p>
 Everything will install under /usr/local/ag.  The source RPM unpacks
 as a checked out anonymous source tree  with GCC and libgcj unified
-under a single root.    ftp access to sources is pretty tight, so
-you'll probably want to wait 'til it has propagated to the various
-<a href=http://sources.redhat.com/mirrors.html>Mirror Sites</a>.
+under a single root. 
 Debian users can use <code>alien --to-deb</code> to convert the rpms.
 <p>
 You have to add <code>/usr/local/ag/bin</code> to your <code>PATH</code>
@@ -235,7 +238,7 @@ for more details on downloading and using this release.</td>
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.12 2000/08/27 22:03:04 mark Exp $
+$Id: download.html,v 1.13 2000/11/30 03:48:30 bryce Exp $
 </small>
 </address>
 
