* faq.html (2.4): Update AWT status.

--- a/htdocs/java/faq.html
+++ b/htdocs/java/faq.html
@@ -280,42 +280,10 @@ $ gij HelloWorld
       </dl>
       <h3><a name="2_4">2.4 What is the state of AWT support</a>?</h3>
       <dl> 
-        <dd> No support is currently in place for AWT. Prior Art which could be 
-          used for this all require JNI. Possible starting points follow: 
-          <dl> </dl>
-          <p>QtAWT</p>
-          <blockquote> 
-            <p>QtAWT ( )provides a Qt based implementation of the peer classes 
-              used by the AWT components. This consists of a set of Java classes 
-              that implement the interfaces specified in java.awt.peer, and a 
-              few others such as java.awt.Toolkit. The classes are implemented 
-              in a mixture of Java code and native code, with the native methods 
-              being called via the JNI. Because it sticks to standard APIs such 
-              as the JNI QtAWT should be portable enough to work on any 1.1 JVM. 
-              Once the class and library paths have been set up correctly, the 
-              QtAWT can be used instead of the native peers provided with your 
-              JVM by setting the awt.toolkit property to point to the QtToolkit 
-              implementation. </p>
-          </blockquote>
-        </dd>
-        <dl> 
-          <dt>&nbsp;</dt>
-          <dd><a href="http://developer.kde.org/language-bindings/java/qtawt/developer.html">http://developer.kde.org/language-bindings/java/qtawt/developer.html</a></dd>
-          <dt>&nbsp;</dt>
-          <dt>GTK AWT</dt>
-          <dd>Some Mozilla / Blackdown project mambers are having a go at this 
-            (free login required):</dd>
-          <dd><a href="http://developer.java.sun.com/developer/restricted/java2cs/contribs/">http://developer.java.sun.com/developer/restricted/java2cs/contribs/</a></dd>
-          <dt>&nbsp;</dt>
-          <dd>The Classpath project is doing AWT with GTK peers, and they're looking 
-            for someone who wants to make Classpath work with Kaffe ... <a href="http://www.gnu.org/software/classpath/">http://www.gnu.org/software/classpath/</a></dd>
-          <dt>&nbsp;</dt>
-        </dl>
-        <dl> 
-          <dt><a href="http://www.kaffe.org/">Kaffe</a> AWT</dt>
-          <dd>Kaffe has a JNI based AWT implementation using lightweight peers. 
-            Work is currently in progress to implement using GTK.</dd>
-        </dl>
+        <dd> Work is in progress to implement AWT and Java2D. We 
+	intend to support both GTK and xlib peers written using CNI. Some
+	components are already working atop the 
+	<A HREF="http://www.ii.uib.no/~rolfwr/jcnix/">xlib peers</A>.
       </dl>
       <hr>
       <h3><a name="2_5">2.5 How about support for Swing</a>?</h3>
@@ -825,7 +793,7 @@ $ ../configure [...]
 </table>
 <hr>
 <address> <a href="about.html">The GCJ team</a> <br>
-<small> $Id: faq.html,v 1.30 2000/10/17 21:36:34 mark Exp $ </small></address>
+<small> $Id: faq.html,v 1.31 2000/11/03 02:48:44 tromey Exp $ </small></address>
 <h2 align=center>&nbsp;</h2>
 
     <!--#include virtual="/include/footer-subpages.html"-->
