Make "Known bugs" link from index.html point to bugs.html#known.  Move text pointing to latest document version to the top of bugs.html. Don't link to old faq.html#bugreport URL.  Add to the list of known bugs the problems building GCC 2.95.2 with glibc 2.2 (with link to patch) and building PINE 4.30 / IMAP2000 on Solaris.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -85,7 +85,7 @@
 <P>
 <A HREF="bugs.html">Reporting...</A><BR>
 <A HREF="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;user=guest&amp;password=guest&amp;cmd=login">GNATS</A><BR>
-<A HREF="bugs.html">Known bugs</A>
+<A HREF="bugs.html#known">Known bugs</A>
 </P>
 <HR>
 <FORM METHOD="get" ACTION="http://gcc.gnu.org/cgi-bin/ml-request">
