--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -6,6 +6,9 @@
 
 <body>
 
+<p>The latest version of this document is always available at
+<a href="http://gcc.gnu.org/bugs.html">http://gcc.gnu.org/bugs.html</a>.
+
 <p><a href="#report">Reporting Bugs</a>
  | <a href="#manage">Managing Bugs (GNATS and the test-suite)</a>
  | <a href="#known">Frequently Reported Bugs in GCC 2.95</a>
@@ -194,8 +197,20 @@ contributors.</p>
 
 <h1><a name="known">Frequently Reported Bugs in GCC 2.95</a></h1>
 
-<p>The latest version of this document is always available at <a href="
-http://gcc.gnu.org/bugs.html">http://gcc.gnu.org/bugs.html</a>.
+<h2>General</h2>
+
+<p>The following bugs are very frequently reported.</p>
+
+<ul>
+
+<li>GCC 2.95.2 does not build on GNU/Linux systems using glibc 2.2,
+such as Red Hat 7.0.  A <a href="install/glibc-2.2.patch">patch</a> is
+available.  This will be fixed in GCC 2.95.3 and GCC 3.0.</li>
+
+<li>GCC 2.95.2 crashes when compiling <code>mbx.c</code> from the PINE
+4.30 or IMAP2000 distribution on Sparc systems running Solaris.</li>
+
+</ul>
 
 <h2>Fortran</h2>
 <p> Fortran bugs are documented in the G77 manual rather than explicitly
@@ -211,7 +226,7 @@ but not yet
 fixed. While it is certainly better to fix bugs instead of documenting
 them, this document might save people the effort of writing a bug
 report when the bug is already well-known.
-<a href="faq.html#bugreport">How to report bugs</a> tells you how to report a
+<a href="#report">How to report bugs</a> tells you how to report a
 bug.
 
 <p>There are many reasons why reported bugs don't get fixed. It might
