Update notes on Windows and OS/2. Fix one markup problem. By Kelley Cook <Kelley.Cook@home.com>.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -35,7 +35,8 @@ GNU Compiler Collection on your machine.</p>
   <li><a href="#sparc-sun-sunos*">sparc-sun-sunos*</a></li>
   <li><a href="#sparc-unknown-linux-gnulibc1">sparc-unknown-linux-gnulibc1</a></li>
   <li><a href="#sparc64-*-*">sparc64-*-*</a></li>
-  <li><a href="#win+os2">GCC with Windows or OS/2</a></li>
+  <li><a href="#windows">Microsoft Windows</a></li>
+  <li><a href="#os2">OS/2</a></li>
 </ul>
 
 <ul>
@@ -436,7 +437,7 @@ which just exits with zero status and placing it in your path.</p>
 <p>If you are using Irix cc as your bootstrap compiler, you must
 ensure that the N32 ABI is in use.  To test this, compile a simple C
 file with <CODE>cc</CODE> and then run <CODE>file</CODE> on the
-resulting object file.  The output should look like:
+resulting object file.  The output should look like:</p>
 
 <blockquote><code>
 test.o:         ELF N32 MSB ...
@@ -447,7 +448,7 @@ If you see:
 test.o:         ELF 32-bit MSB
 </code></blockquote>
 
-then your version of <CODE>cc</CODE> uses the O32 ABI default.  You
+<p>then your version of <CODE>cc</CODE> uses the O32 ABI default.  You
 should set the environment variable <CODE>CC</CODE> to 'cc -n32'
 before configuring GCC.</p>
 
@@ -600,15 +601,23 @@ recognize (via <code>uname -a</code>) the system as
 
 
 <hr>
-<h3><a name="win+os2"></a>GCC with Windows or OS/2</h3>
+<h3><a name="windows"></a>Microsoft Windows (32 bit)</h3>
 
-<p>GCC does not currently support Windows, either natively or with the
-cygwin32 dll, but there are some links on our <a href="binaries.html">
-binaries page</a>.</p>
+<p>GCC currently builds under the <a href="http://www.cygwin.com/">Cygwin
+environment</a>.  However you need to delete (or rename) the texinfo
+directory included with the GCC sources.  You will also need to configure
+with the option <code>--with-included-gettext</code>.</p>
+
+<hr>
+<h3><a name="os2"></a>OS/2</h3>
 
 <p>GCC does not currently support OS/2.  However, Andrew Zabolotny has been
-working on a generic os/2 port with pgcc.  The current code code can be found
+working on a generic OS/2 port with pgcc.  The current code code can be found
 at <a href="http://www.goof.com/pcg/os2/">http://www.goof.com/pcg/os2/</a>.</p>
+
+<p>An older copy of GCC 2.8.1 is included with the EMX tools available at 
+<a href="ftp://ftp.leo.org/pub/comp/os/os2/leo/devtools/emx+gcc/">
+ftp://ftp.leo.org/pub/comp/os/os2/leo/devtools/emx+gcc/</a>.</p>
 
 
 <hr>
