Update information on hppa*-hp-hpux*.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -116,9 +116,15 @@ flag <code>-mieee</code>.</p>
 <p>We <em>highly</em> recommend using gas/binutils-2.8 or newer on all hppa
 platforms; you may encounter a variety of problems when using the HP assembler.</p>
 
-<p>If you wish to use pa-risc 2.0 architecture support, you must use either the
-HP assembler or a recent
-<a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots">snapshot of gas</a>.</p>
+<p>Specifically, <code>-g</code> does not work on HP-UX (since that system
+uses a peculiar debugging format which GCC does not know about), unless you
+use GAS and GDB and configure GCC with the <code>--with-gnu-as</code>
+option.</p>
+
+<p>If you wish to use pa-risc 2.0 architecture support, you must use either
+the HP assembler or a recent
+<a href="ftp://sourceware.cygnus.com/pub/binutils/snapshots">snapshot of
+gas</a>.</p>
 
 <p>More specific information to hppa*-hp-hpux* targets follows.</p>
 
