--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -181,7 +181,7 @@ our lists into a single folder named INLIST.gcc:</p>
 
 <blockquote><code>
 :0<br>
-* ^Sender: gcc(-announce|-bugs|-patches)?-owner@gcc.gnu.org<br>
+* ^Sender: .*-owner@gcc.gnu.org<br>
 INLIST.gcc<br>
 </code></blockquote>
 
@@ -190,7 +190,7 @@ can use the following recipe (Use at your own risk!):</p>
 
 <blockquote><code>
 :0 Wh: msgid.lock<br>
-* ^Sender: gcc(-announce|-bugs|-patches)?-owner@gcc.gnu.org<br>
+* ^Sender: .*-owner@gcc.gnu.org<br>
 | formail -D 8192 msgid.cache
 </code></blockquote>
 
