--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -39,7 +39,7 @@ directory may be deleted from libio/configure.in.
 runtest.exp, the following environment variables should be set
 appropriately, for example:</p>
 
-<blockquote></code>
+<blockquote><code>
 TCL_LIBRARY = /usr/share/tcl8.0<br>
 DEJAGNULIBS = /usr/share/dejagnu
 </code></blockquote>
